@@ -295,7 +295,7 @@ Element.Methods = {
     for (var attr in attributes) {
       name = t.names[attr] || attr;
       value = attributes[attr];
-      if (t.values[attr]) name = t.values[attr](element, value);
+      if (t.values[name]) name = t.values[name](element, value);
       if (value === false || value === null)
         element.removeAttribute(name);
       else if (value === true)
@@ -822,6 +822,10 @@ else if (Prototype.Browser.IE) {
         element.checked = !!value;
       },
       
+      encType: function(element, value) {  
+        element.getAttributeNode('encType').value = value;  
+      },
+      
       style: function(element, value) {
         element.style.cssText = value ? value : '';
       }
@@ -842,6 +846,7 @@ else if (Prototype.Browser.IE) {
       src:         v._getAttr,
       type:        v._getAttr,
       action:      v._getAttrNode,
+      encType:     v._getAttrNode,
       disabled:    v._flag,
       checked:     v._flag,
       readonly:    v._flag,
