@@ -1,3 +1,5 @@
+* Fix Element read/write attribute methods for the 'encType' form attribute in IE. Closes #11126. [kangax, NoiseEee]
+
 * Element#down on an input element should not raise error. Closes #11102. [humeniuc, kangax]
 
 * Make Function#argumentNames handle multiple spaces and line breaks between arguments. [#63 state:resolved] [Geoff M. Granum, Tobie Langel]
